Cambios para generar el listado de declaraciones pendientes

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -5204,3 +5204,26 @@ autorizado.asignarse.resumen.enviar=Enviar
 autorizado.asignarse.resumen.addcalidad=Agregar otra calidad
 autorizado.asignarse.resumen.nota2=Se enviará a un Funcionario Facultado de la SDH para su revisión y autorización
 
+autorizado.impuestos.0001=Predial
+autorizado.impuestos.0002=Vehículos
+autorizado.impuestos.0003=Industria y Comercio
+autorizado.impuestos.0004=Reteica
+autorizado.impuestos.0005=Sobretasa Motor
+autorizado.impuestos.0006=Delineación Urbana
+autorizado.impuestos.0007=Publicidad Exterior Visual
+autorizado.impuestos.0008=
+autorizado.impuestos.0009=
+autorizado.impuestos.0010=Fondo Unif. Pobres, Azar y Esp
+
+autorizado.periodo.mes.01=Enero
+autorizado.periodo.mes.02=Febrero
+autorizado.periodo.mes.03=Marzo
+autorizado.periodo.mes.04=Abril
+autorizado.periodo.mes.05=Mayo
+autorizado.periodo.mes.06=Junio
+autorizado.periodo.mes.07=Julio
+autorizado.periodo.mes.08=Agosto
+autorizado.periodo.mes.09=Septiembre
+autorizado.periodo.mes.10=Octubre
+autorizado.periodo.mes.11=Noviembre
+autorizado.periodo.mes.12=Diciembre
