Se elimina la palabra repetida Más información del cuadro de Publicidad Exterior y se agrega el select para tamaño de valla en el liquidador, y se ajusta el Editor de direcciones de Mi RIT

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2644,7 +2644,7 @@ sobre.vehiculos.declarations.pay=Pagar
 
 
 publicidad.exterior.title=Publicidad Exterior
-publicidad.exterior.description=Causación del Impuesto a la Publicidad Exterior Visual se realiza al momento de la notificación del acto administrativo mediante el cual la Secretaría Distrital de Ambiente otorga el registro de la valla con una dimensión igual o superior a ocho (8) metros cuadrados, con vigencia de un año. Más información.
+publicidad.exterior.description=Causación del Impuesto a la Publicidad Exterior Visual se realiza al momento de la notificación del acto administrativo mediante el cual la Secretaría Distrital de Ambiente otorga el registro de la valla con una dimensión igual o superior a ocho (8) metros cuadrados, con vigencia de un año.
 
 publicidad.exterior.showing=Mostrando:
 publicidad.exterior.dataPerPage=datos por página
@@ -2940,7 +2940,7 @@ predial.unificado.pagos.cardType=Tipo de Tarjeta
 
 
 publicidad.exterior.title=Publicidad Exterior
-publicidad.exterior.description=Causación del Impuesto a la Publicidad Exterior Visual se realiza al momento de la notificación del acto administrativo mediante el cual la Secretaría Distrital de Ambiente otorga el registro de la valla con una dimensión igual o superior a ocho (8) metros cuadrados, con vigencia de un año. Más información.
+publicidad.exterior.description=Causación del Impuesto a la Publicidad Exterior Visual se realiza al momento de la notificación del acto administrativo mediante el cual la Secretaría Distrital de Ambiente otorga el registro de la valla con una dimensión igual o superior a ocho (8) metros cuadrados, con vigencia de un año.
 
 publicidad.exterior.showing=Mostrando:
 publicidad.exterior.dataPerPage=datos por página
