se agrega codigo para mostrar el bp de los reprensentados y para mostrar en el listado de contribuyentes solo los representado y ocultar los repredentantes

--- a/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_es.properties
@@ -135,6 +135,7 @@ type.SDHAgent.documentNumber.name=Número de Documento
 type.SDHAgent.documentType.name=Tipo de Documento
 type.SDHAgent.completeName.name=Nombre Completo
 type.SDHAgent.internalFunction.name=Función Interna
+type.SDHAgent.bp.name=BP
 
 type.SDHReteICATax.consecutive.name=Consecutivo
 type.SDHReteICATax.objectNumber.name=Número de Objeto
