Tramites (creacion y seguimiento) Atencion a incidencias 16/agosto

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4872,7 +4872,7 @@ tramites.seguimiento.tabla.numrad=Número de radicado
 tramites.seguimiento.tabla.categ=Categoría
 tramites.seguimiento.tabla.estado=Estado
 
-tramites.seguimiento.detalle.numtam=Núemro de trámite
+tramites.seguimiento.detalle.numtam=Número de trámite
 tramites.seguimiento.detalle.tiptramite=Tipo de trámite
 tramites.seguimiento.detalle.numrad=Número de radicado
 tramites.seguimiento.detalle.subtramite=Sub trámite
