Se agrega la opción de Delacraciones al menú de Consultas

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -5227,3 +5227,5 @@ autorizado.periodo.mes.09=Septiembre
 autorizado.periodo.mes.10=Octubre
 autorizado.periodo.mes.11=Noviembre
 autorizado.periodo.mes.12=Diciembre
+
+declaracion.inicial.titulo= Declaraciones
