Se agrega campo de indicador temporarl a atabla de datos generales de predial unificado

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3455,6 +3455,7 @@ predial.unificado.table.codLocalidad= Código localidad
 predial.unificado.table.estpredio= Estatus del predio
 predial.unificado.table.nomconarren= No. contrato arrendamiento
 predial.unificado.table.fecinactiva= Fecha inactivación
+predial.unificado.table.indicador= Indicador Temporal
 
 predial.unificado.juridicos.title= Datos Jurídicos
 predial.unificado.juridicos.chip= CHIP
