Se agrega uncionalidad para Obligaciones pendientes y se atienenden incidente 60 Mensaje de Mi RIT e incidencia 108 para bloquear opciones del periodo de Generar Declaración

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2439,7 +2439,8 @@ sobretasa.gasolina.detail.representaitonType=Tipo de representación
 
 login.not.a.robot=No soy un robot
 login.not.a.robot.exception=Por favor valida que no eres un robot
-login.not.a.validEmail.exception=Por favor, introduce un email válido
+#login.not.a.validEmail.exception=Por favor, introduce un email válido Se comenta devido a incidente 60
+login.not.a.validEmail.exception=Escribe una dirección de correo electrónico válida
 login.user.disabled.exception= Cuenta no activa revisa tu correo y actívala
 login.user.not.exists=Correo no registrado, obtén tu contraseña
 
@@ -3792,13 +3793,15 @@ obligacion.sujeto.ica.titulo=ICA
 obligacion.sujeto.ica.aniograv=Año Gravable
 obligacion.sujeto.ica.periodo=Periodo
 obligacion.sujeto.ica.edoobliga=Estado de Obligación
-obligacion.sujeto.ica.obligacion=Obligación
+obligacion.sujeto.ica.obligacion=Obligaciones
 obligacion.sujeto.ica.actooficial=Acto Oficial
 obligacion.sujeto.ica.regresar=Regresar
 obligacion.sujeto.ica.cancelar=Cancelar
 obligacion.sujeto.ica.paglinea=Pago en Línea
 obligacion.sujeto.ica.presendecla=Presentar declaración
 obligacion.sujeto.ica.genrop=Generar ROP
+obligacion.sujeto.ica.informacion=Información
+obligacion.sujeto.ica.oblig=Obligación
 
 obligacion.sujeto.vehiculos.titulo=Vehículos
 obligacion.sujeto.vehiculos.placa=Placa
@@ -3819,12 +3822,14 @@ obligacion.sujeto.gasolina.titulo=Sobretasa a la Gasolina
 obligacion.sujeto.gasolina.aniograv=Año Gravable
 obligacion.sujeto.gasolina.periodo=Periodo
 obligacion.sujeto.gasolina.edoobliga=Estado de Obligación
-obligacion.sujeto.gasolina.obligacion=Obligación
+obligacion.sujeto.gasolina.obligacion=Obligaciones
 obligacion.sujeto.gasolina.actooficial=Acto Oficial
 obligacion.sujeto.gasolina.regresar=Regresar
 obligacion.sujeto.gasolina.cancelar=Cancelar
 obligacion.sujeto.gasolina.presendecla=Presentar declaración
 obligacion.sujeto.gasolina.paglinea=Pagar en línea
+obligacion.sujeto.gasolina.informacion=Información
+obligacion.sujeto.gasolina.oblig=Obligación
 
 obligacion.sujeto.delurbana.titulo=Delienación urbana
 obligacion.sujeto.delurbana.cdu=CDU
@@ -3852,6 +3857,7 @@ obligacion.sujeto.publiext.regresar=Regresar
 obligacion.sujeto.publiext.cancelar=Cancelar
 obligacion.sujeto.publiext.presendecla=Presentar declaración
 obligacion.sujeto.publiext.paglinea=Pagar en línea
+obligacion.sujeto.publiext.informacion=Información
 
 obligacion.inicial.selcimpuesto= Impuesto
 obligacion.inicial.periodo= Periodo
@@ -3905,6 +3911,11 @@ obligacion.inicial.delineacion.aniograv= Año Gravable
 obligacion.inicial.delineacion.fecreporte=Fecha reporte
 obligacion.inicial.delineacion.numident=No. Identificación
 obligacion.inicial.delineacion.tipiden=Tipo de identificación
+obligacion.inicial.delineacion.direccion=Dirección
+obligacion.inicial.delineacion.informacion=Información
+obligacion.sujeto.delurbana.informacion=Información
+obligacion.sujeto.delurbana.oblig=Obligación
+obligacion.sujeto.delurbana.actooficial=Acto Oficial
 
 
 relacion.inicial.titulo= Relación de Pagos
