--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3844,6 +3844,10 @@ certideclara.inicial.publicidad.seleccionar= Seleccionar
 
 certideclara.inicial.gasolina.tipdocu= Tipo de Documento
 certideclara.inicial.gasolina.numdocu= Número de Documento
+certideclara.inicial.gasolina.referencia= Referencia
+certideclara.inicial.gasolina.clavePeriodo= Clave de periodo
+certideclara.inicial.gasolina.importe= Importe
+certideclara.inicial.gasolina.moneda= Moneda
 certideclara.inicial.gasolina.seleccionar= Seleccionar
 
 certideclara.inicial.delineacion.cdu= CDU
