Se agregan cambios basados en incidencias de TI

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -5319,6 +5319,13 @@ predial.basespresun.firma.presendecla=Presentar Declaración
 predial.basespresun.firma.paglinea=Pagar en línea
 predial.basespresun.firma.spac=SPAC
 
+#Se agrega a contribuyente lista de representantes 02/10/2019 dev-Maria
+contribuyente.listacontib.titulo=Selecciona el contribuyente que deseas representar
+contribuyente.listacontib.tipdoc=Tipo de documento
+contribuyente.listacontib.numdoc=Número de documento
+contribuyente.listacontib.idcontrib=Id contribuyente
+contribuyente.listacontib.nombre=Nombre
+contribuyente.listacontib.seleccionar=Seleccionar
 
 
 
