se agregan más cambios para corrección de incidentes por parte de usuario

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2895,7 +2895,7 @@ impuestos.decGasolina.Pago.crearNuevaDec = Crear nueva Declaración
 impuestos.decGasolina.Pago.PresentarDec = Presentar Declaración
 impuestos.decGasolina.Pago.Pagar = Pagar en línea
 impuestos.decGasolina.Pago.Regresar = Regresar
-impuestos.decGasolina.Pago.nota = *Nota: Recordar que el pago de este impuesto, únicamente podrá ser pagado mediante el pago en línea
+impuestos.decGasolina.Pago.nota = *Nota: Recuerde que el pago de este impuesto, únicamente se realiza a través de "Pago en línea"
 impuestos.decGasolina.Pago.redireccionandoPSE = Redireccionando automáticamente a pago PSE
 
 #sobretasa a gasolina
