Se agregan cambios para consumo de servicio de detalle de vehiculos

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3139,6 +3139,7 @@ sobre.vehiculo.table.numpuertas= No. puertas
 sobre.vehiculo.table.blindado= Blindado
 sobre.vehiculo.table.cilindraje= Cilindraje
 sobre.vehiculo.table.avaluo= Avalúo
+sobre.vehiculo.table.verdetalle= Ver detalle
 
 sobre.vehiculo.detail.title= Detalle
 sobre.vehiculo.detail.placa= Placa
