Agente autorizado (lista de declaraciones de contribuyente) Ajustes en titulo y columna estatus

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4481,7 +4481,7 @@ autorizado.listacontib.idcontrib=Id contribuyente
 autorizado.listacontib.nombre=Nombre
 autorizado.listacontib.seleccionar=Seleccionar
 
-autorizado.listadeclaraciones.titulo= Lista de declaraciones a firmar
+autorizado.listadeclaraciones.titulo= Lista de declaraciones pendientes
 autorizado.listadeclaraciones.declarcion= Declaración
 autorizado.listadeclaraciones.impuesto=Impuesto
 autorizado.listadeclaraciones.angrav=Año gravable
