Se agregan cambios para lista de declaraciones de contribuyente

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -5321,12 +5321,17 @@ predial.basespresun.firma.paglinea=Pagar en línea
 predial.basespresun.firma.spac=SPAC
 
 #Se agrega a contribuyente lista de representantes 02/10/2019 dev-Maria
-contribuyente.listacontib.titulo=Selecciona el contribuyente que deseas representar
-contribuyente.listacontib.tipdoc=Tipo de documento
-contribuyente.listacontib.numdoc=Número de documento
-contribuyente.listacontib.idcontrib=Id contribuyente
-contribuyente.listacontib.nombre=Nombre
-contribuyente.listacontib.seleccionar=Seleccionar
+contribuyente.listadeclaraciones.titulo= Lista de declaraciones pendientes
+contribuyente.listadeclaraciones.declarcion= Declaración
+contribuyente.listadeclaraciones.impuesto=Impuesto
+contribuyente.listadeclaraciones.angrav=Año gravable
+contribuyente.listadeclaraciones.periodo=Periodo
+contribuyente.listadeclaraciones.estatus=Estatus
+contribuyente.listadeclaraciones.seleccionar=Seleccionar
+contribuyente.listadeclaraciones.relacion=Relación
+contribuyente.listadeclaraciones.tipid=TipoID
+contribuyente.listadeclaraciones.numid=NumID
+contribuyente.listadeclaraciones.nombre=Nombre 
 
 
 
