cambios de formato a campos de Mi RIT y tamaño de campos detalle de vehiculos

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1867,7 +1867,7 @@ mirit.personalData.updateName=Actualizar nombre
 mirit.personalData.certifName=Certificar nombre
 mirit.personalData.dv=DV
 
-mirit.generalData.title=Mis datos generales Persona Natural
+mirit.generalData.title=Mis datos generales persona natural
 mirit.generalData.treatment=Tratamiento
 mirit.generalData.gender=Género
 mirit.generalData.birthDate=Fecha de nacimiento
@@ -1877,7 +1877,7 @@ mirit.generalData.nationality=Nacionalidad
 mirit.generalData.birthPlace=Lugar de nacimiento
 
 
-mirit.contactData.title=Datos de Contacto
+mirit.contactData.title=Datos de contacto
 mirit.contactData.notificationAddress=Dirección de notificación
 mirit.contactData.anotherContactAddress=Otra dirección de contacto
 mirit.contactData.landPhone=Teléfono principal
@@ -1944,7 +1944,7 @@ mirit.myRepresentants.as=En calidad de
 mirit.myRepresentants.refentTo=Relacionado con
 mirit.myRepresentants.iRepresentTo=Soy representante de
 
-mirit.tributaryRols.title=Mis Roles Tributarios
+mirit.tributaryRols.title=Mis roles tributarios
 mirit.tributaryRols.taxpayer=Contribuyente
 mirit.tributaryRols.authoirzedAgent=Agente autorizado
 mirit.tributaryRols.thirdAuthorized=Tercero Autorizado
