Declaraciones (certificacion de pago) ajuste en descripcion de periodo. ICA (declaracion con Agente Autorizado) Ajuste en segmentos Ingresos fuera de Bogota e Ingresos Netos Gravables

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3847,6 +3847,7 @@ certideclara.inicial.gasolina.tipdocu= Tipo de Documento
 certideclara.inicial.gasolina.numdocu= Número de Documento
 certideclara.inicial.gasolina.referencia= Referencia
 certideclara.inicial.gasolina.clavePeriodo= Clave de periodo
+certideclara.inicial.gasolina.desc_clavePeriodo= Periodo
 certideclara.inicial.gasolina.importe= Importe
 certideclara.inicial.gasolina.moneda= Moneda
 certideclara.inicial.gasolina.seleccionar= Seleccionar
