Se agregan cambios a la leyenda de Mi RIT

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1854,7 +1854,7 @@ taxpayers.formalities.newsRIT=Novedades RIT
 taxpayers.formalities.verificacionPagos=Verificación de Pagos
 taxpayers.formalities.retiroBoletinMorosos=Retiro del boletín deudores morosos
 
-mirit.description=Si deseas actualizar la información registrada en cada sección, debes hacer clic en el botón de cada apartado para que el sistema efectúe los cambios correspondientes.
+mirit.description=Para actualizarla información debes hacer clic en el botón “actualizar” ubicado en cada sección para que el sistema efectúe los cambios.
 mirit.personalData.title=Mis datos básicos persona natural
 mirit.personalData.documentType=Tipo de documento
 mirit.personalData.firstName=Primer nombre
