Se agregan cambios para declaracion de vehiculos

--- a/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_es.properties
@@ -104,6 +104,7 @@ type.Customer.rolList.name=Roles
 type.Customer.exteriorPublicityTaxList.name=Impuestos de Publicidad Exterior
 type.Customer.gasTaxList.name=Impuestos de Gasolina
 type.Customer.reteIcaTax.name=ReteICA 
+type.Customer.vehiculosTaxList.name=Vehiculos
 
 type.SDHAddress.name=Dirección
 type.SDHAddress.addKind.name=Tipo
