Se agregan cambios para la primera parte de declaracion vehicular

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -27906,3 +27906,21 @@ vehiculos.detalle.linea.48606=DDT600
 vehiculos.detalle.linea.48629=HILUX
 vehiculos.detalle.linea.48630=K 1500
 
+vehiculos.detalle.idServicio.01=PARTICULAR
+vehiculos.detalle.idServicio.02=PÚBLICO
+vehiculos.detalle.idServicio.03=OFICIAL
+
+
+vehiculos.detalle.clasicoAntig.0=NO APLICA
+vehiculos.detalle.clasicoAntig.1=ANTIGUO
+vehiculos.detalle.clasicoAntig.2=CLASICO
+
+vehiculos.detalle.tipoVeh.1=AUTOMÓVILES
+vehiculos.detalle.tipoVeh.2=CAMPEROS Y CAMIONETAS
+vehiculos.detalle.tipoVeh.3=CAMIONETAS DOBLE CABINA
+vehiculos.detalle.tipoVeh.4=ELÉCTRICOS
+vehiculos.detalle.tipoVeh.5=MOTOS Y MOTOCARROS
+vehiculos.detalle.tipoVeh.6=PASAJEROS
+vehiculos.detalle.tipoVeh.7=CARGA
+vehiculos.detalle.tipoVeh.8=AMBULANCIAS
+
