Se agregan cambios para vehiculos con correcciones de vista

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3166,8 +3166,8 @@ sobre.vehiculo.juridicos.fechasta= Fecha hasta
 sobre.vehiculo.marcas.title= Marcas
 sobre.vehiculo.marcas.codmarca= Código de marca
 sobre.vehiculo.marcas.descrip= Descripción
-sobre.vehiculo.marcas.excencion= % de excención
-sobre.vehiculo.marcas.valexcencion= Valor de excención
+sobre.vehiculo.marcas.excencion= % de exención
+sobre.vehiculo.marcas.valexcencion= Valor de exención
 sobre.vehiculo.marcas.fecdesde= Fecha desde
 sobre.vehiculo.marcas.fechasta= Fecha hasta
 
@@ -27923,4 +27923,8 @@ vehiculos.detalle.tipoVeh.5=MOTOS Y MOTOCARROS
 vehiculos.detalle.tipoVeh.6=PASAJEROS
 vehiculos.detalle.tipoVeh.7=CARGA
 vehiculos.detalle.tipoVeh.8=AMBULANCIAS
+
+vehiculos.detalle.opuso.01=Declaración
+vehiculos.detalle.opuso.02=Corrección
+
 
