Se agregan ajustes para vehiculos

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -5335,9 +5335,11 @@ contribuyente.listadeclaraciones.numid=NumID
 contribuyente.listadeclaraciones.nombre=Nombre 
 
 
+vehiculos.detalle.blindado.=-
 vehiculos.detalle.blindado.N=No
 vehiculos.detalle.blindado.S=Si
 
+vehiculos.detalle.marca.=-
 vehiculos.detalle.marca.000002=DAEWOO
 vehiculos.detalle.marca.000004=HYUNDAI
 vehiculos.detalle.marca.000005=KIA
@@ -6724,6 +6726,7 @@ vehiculos.detalle.marca.104501=YINJI
 vehiculos.detalle.marca.104512=TEREX BENFORD
 vehiculos.detalle.marca.104513=KAYSER
 
+vehiculos.detalle.clase.=-
 vehiculos.detalle.clase.000=000-SIN INFORMACION REPORTADA
 vehiculos.detalle.clase.001=AUTOMOVIL
 vehiculos.detalle.clase.002=BUS
@@ -6944,6 +6947,7 @@ vehiculos.detalle.carroceria.208=CISTERNA
 vehiculos.detalle.carroceria.220=FURGON
 vehiculos.detalle.carroceria.222=COUPE CONVERTIBLE
 
+vehiculos.detalle.linea.=-
 vehiculos.detalle.linea.ID linea=Descripción
 vehiculos.detalle.linea.000001=PLUS 150
 vehiculos.detalle.linea.000002=MAX100
@@ -24260,7 +24264,7 @@ vehiculos.detalle.linea.030433=CREF45
 vehiculos.detalle.linea.030434=ACCENT
 vehiculos.detalle.linea.030435=TORNAD
 vehiculos.detalle.linea.030436=NUEVO
-vehiculos.detalle.linea.030437="C10-10000
+vehiculos.detalle.linea.030437=C10-10000
 X120030438000275320I G0000
 X120030439000017FOREST0000
 X1200304400004861199 A0000
@@ -27906,15 +27910,17 @@ vehiculos.detalle.linea.48606=DDT600
 vehiculos.detalle.linea.48629=HILUX
 vehiculos.detalle.linea.48630=K 1500
 
+vehiculos.detalle.idServicio.=-
 vehiculos.detalle.idServicio.01=PARTICULAR
 vehiculos.detalle.idServicio.02=PÚBLICO
 vehiculos.detalle.idServicio.03=OFICIAL
 
-
+vehiculos.detalle.clasicoAntig.=-
 vehiculos.detalle.clasicoAntig.0=NO APLICA
 vehiculos.detalle.clasicoAntig.1=ANTIGUO
 vehiculos.detalle.clasicoAntig.2=CLASICO
 
+vehiculos.detalle.tipoVeh.=-
 vehiculos.detalle.tipoVeh.1=AUTOMÓVILES
 vehiculos.detalle.tipoVeh.2=CAMPEROS Y CAMIONETAS
 vehiculos.detalle.tipoVeh.3=CAMIONETAS DOBLE CABINA
@@ -27924,6 +27930,7 @@ vehiculos.detalle.tipoVeh.6=PASAJEROS
 vehiculos.detalle.tipoVeh.7=CARGA
 vehiculos.detalle.tipoVeh.8=AMBULANCIAS
 
+vehiculos.detalle.opuso.=-
 vehiculos.detalle.opuso.01=Declaración
 vehiculos.detalle.opuso.02=Corrección
 
