Se modifica Response de detalle vehiculos

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -6778,6 +6778,7 @@ vehiculos.detalle.clase.163=CICLOMOTOR
 vehiculos.detalle.clase.164=TRICIMOTO
 vehiculos.detalle.clase.165=CUADRICICLO
 
+vehiculos.detalle.carroceria.=-
 vehiculos.detalle.carroceria.001=ESCALERA
 vehiculos.detalle.carroceria.002=CABINADO
 vehiculos.detalle.carroceria.003=CARPADO
