Se agregan cambios para mostrar en generar declaracion opcion de sobre vehiculos

--- a/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_en.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_en.properties
@@ -128,6 +128,18 @@ type.SDHExteriorPublicityTax.resolutionNumber.name=Resolution Number
 type.SDHExteriorPublicityTax.fenceType.name=Fence type
 type.SDHExteriorPublicityTax.objectNumber.name=Object Number
 
+type.SDHVehiculosTax.name=Vehiculos Tax
+type.SDHVehiculosTax.placa=Placa
+type.SDHVehiculosTax.marca=Marca
+type.SDHVehiculosTax.linea=Linea
+type.SDHVehiculosTax.modelo=Modelo
+type.SDHVehiculosTax.clase=Clase
+type.SDHVehiculosTax.carroceria=Carroceria
+type.SDHVehiculosTax.numPuertas=NumPuertas
+type.SDHVehiculosTax.blindado=Blindado
+type.SDHVehiculosTax.cilindraje=Cilindraje
+type.SDHVehiculosTax.numObjeto=NumObjeto
+
 type.SDHAgent.name=Agent
 type.SDHAgent.documentNumber.name=Document Number
 type.SDHAgent.documentType.name=Document Type
