--- a/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_es.properties
@@ -131,6 +131,18 @@ type.SDHExteriorPublicityTax.fenceType.name=Tipo de Valla
 type.SDHExteriorPublicityTax.objectNumber.name=Número de Objeto
 type.SDHExteriorPublicityTax.anoGravable.name=Año Gravable
 
+type.SDHVehiculosTax.name=Vehiculos Tax
+type.SDHVehiculosTax.placa=Placa
+type.SDHVehiculosTax.marca=Marca
+type.SDHVehiculosTax.linea=Linea
+type.SDHVehiculosTax.modelo=Modelo
+type.SDHVehiculosTax.clase=Clase
+type.SDHVehiculosTax.carroceria=Carroceria
+type.SDHVehiculosTax.numPuertas=NumPuertas
+type.SDHVehiculosTax.blindado=Blindado
+type.SDHVehiculosTax.cilindraje=Cilindraje
+type.SDHVehiculosTax.numObjeto=NumObjeto
+
 type.SDHAgent.name=Agente
 type.SDHAgent.documentNumber.name=Número de Documento
 type.SDHAgent.documentType.name=Tipo de Documento
