Se agregan cambios a catalogo clasico antiguo de vehiculos

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -27918,8 +27918,11 @@ vehiculos.detalle.idServicio.03=OFICIAL
 
 vehiculos.detalle.clasicoAntig.=-
 vehiculos.detalle.clasicoAntig.0=NO APLICA
+vehiculos.detalle.clasicoAntig.00=NO APLICA
 vehiculos.detalle.clasicoAntig.1=ANTIGUO
 vehiculos.detalle.clasicoAntig.2=CLASICO
+vehiculos.detalle.clasicoAntig.01=ANTIGUO
+vehiculos.detalle.clasicoAntig.02=CLASICO
 
 vehiculos.detalle.tipoVeh.=-
 vehiculos.detalle.tipoVeh.1=AUTOMÓVILES
