Se agregan cambios para presentar declaracion - tabla de vehiculos

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3139,6 +3139,7 @@ sobre.vehiculo.table.numpuertas= No. puertas
 sobre.vehiculo.table.blindado= Blindado
 sobre.vehiculo.table.cilindraje= Cilindraje
 sobre.vehiculo.table.avaluo= Avalúo
+sobre.vehiculo.table.presndecla=Presentar Declaracion
 sobre.vehiculo.table.verdetalle= Ver detalle
 
 sobre.vehiculo.detail.title= Detalle
@@ -6807,7 +6808,7 @@ vehiculos.detalle.carroceria.025=RECOLECTOR
 vehiculos.detalle.carroceria.026=PORTACONTENEDOR
 vehiculos.detalle.carroceria.027=MONTACARGA
 vehiculos.detalle.carroceria.028=TRACTOR
-vehiculos.detalle.carroceria.029=ARRASTRADORA (CARGADOR TRONCOS
+vehiculos.detalle.carroceria.029=ARRASTRADORA (CARGADOR TRONCOS)
 vehiculos.detalle.carroceria.030=CARGADOR
 vehiculos.detalle.carroceria.031=RETROEXCAVADORA
 vehiculos.detalle.carroceria.032=VOLCO
