Ajuste reteICA  certificacion de pago

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1384,13 +1384,17 @@ text.account.profile.presendecla= Presentar Declaración
 text.account.profile.gasolina= Sobretasa Gasolina
 text.account.profile.gasolina.declaracion= Declaración Sobretasa Gasolina
 text.account.profile.certipagos= Certificación de pagos
+text.account.profile.arCertipagos= Certificación de pagos
 text.account.profile.declarafirm= Lista de Declaraciones a Firmar
 text.account.profile.delineacion= Delineación Urbana
 text.account.profile.buzon= Mi Buzón
 text.account.profile.oblipendienetes= Obligaciones
+text.account.profile.arOblipendienetes= Obligaciones
 text.account.profile.relapagos= Relación de Pagos
+text.account.profile.arRelapagos= Relación de Pagos
 text.account.profile.vehiculos= Sobre Vehículos
 text.account.profile.estadocuenta= Estado de Cuenta
+text.account.profile.arEstadocuenta= Estado de Cuenta
 text.account.profile.declarapublicidad= Declaración Publicidad Exterior
 text.account.savedCart.id=ID
 text.account.savedCart.dateSaved=Fecha grabada
