Se agregan cambios para periodo de RETEICA en agentes autorizados

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4923,6 +4923,21 @@ autorizado.periodo.mes.10=Octubre
 autorizado.periodo.mes.11=Noviembre
 autorizado.periodo.mes.12=Diciembre
 
+autorizado.periodo.mes.reteIca="-"
+autorizado.periodo.mes.reteIca.00="-"
+autorizado.periodo.mes.reteIca.01=Enero-Febrero
+autorizado.periodo.mes.reteIca.02=Enero-Febrero
+autorizado.periodo.mes.reteIca.03=Marzo-Abril
+autorizado.periodo.mes.reteIca.04=Marzo-Abril
+autorizado.periodo.mes.reteIca.05=Mayo-Junio
+autorizado.periodo.mes.reteIca.06=Mayo-Junio
+autorizado.periodo.mes.reteIca.07=Julio-Agosto
+autorizado.periodo.mes.reteIca.08=Julio-Agosto
+autorizado.periodo.mes.reteIca.09=Septiembre-Octubre
+autorizado.periodo.mes.reteIca.10=Septiembre-Octubre
+autorizado.periodo.mes.reteIca.11=Noviembre-Diciembre
+autorizado.periodo.mes.reteIca.12=Noviembre-Diciembre
+
 declaracion.inicial.titulo= Declaraciones
 
 
