Se agregan cambios para Agentes retenedores --> Certificacion de la declaracion y Declaraciones

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4899,6 +4899,7 @@ autorizado.asignarse.resumen.enviar=Enviar
 autorizado.asignarse.resumen.addcalidad=Agregar otra calidad
 autorizado.asignarse.resumen.nota2=Se enviará a un Funcionario Facultado de la SDH para su revisión y autorización
 
+autorizado.impuestos.="-"
 autorizado.impuestos.0001=Predial
 autorizado.impuestos.0002=Vehículos
 autorizado.impuestos.0003=Industria y Comercio
@@ -4910,6 +4911,7 @@ autorizado.impuestos.0008=
 autorizado.impuestos.0009=
 autorizado.impuestos.0010=Fondo Unif. Pobres, Azar y Esp
 
+autorizado.periodo.mes.="-"
 autorizado.periodo.mes.01=Enero
 autorizado.periodo.mes.02=Febrero
 autorizado.periodo.mes.03=Marzo
@@ -4923,14 +4925,14 @@ autorizado.periodo.mes.10=Octubre
 autorizado.periodo.mes.11=Noviembre
 autorizado.periodo.mes.12=Diciembre
 
-autorizado.periodo.mes.reteIca="-"
+autorizado.periodo.mes.reteIca.="-"
 autorizado.periodo.mes.reteIca.00="-"
 autorizado.periodo.mes.reteIca.01=Enero-Febrero
-autorizado.periodo.mes.reteIca.02=Enero-Febrero
-autorizado.periodo.mes.reteIca.03=Marzo-Abril
-autorizado.periodo.mes.reteIca.04=Marzo-Abril
-autorizado.periodo.mes.reteIca.05=Mayo-Junio
-autorizado.periodo.mes.reteIca.06=Mayo-Junio
+autorizado.periodo.mes.reteIca.02=Marzo-Abril
+autorizado.periodo.mes.reteIca.03=Mayo-Junio
+autorizado.periodo.mes.reteIca.04=Julio-Agosto
+autorizado.periodo.mes.reteIca.05=Septiembre-Octubre
+autorizado.periodo.mes.reteIca.06=Noviembre-Diciembre
 autorizado.periodo.mes.reteIca.07=Julio-Agosto
 autorizado.periodo.mes.reteIca.08=Julio-Agosto
 autorizado.periodo.mes.reteIca.09=Septiembre-Octubre
