--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4899,7 +4899,7 @@ autorizado.asignarse.resumen.enviar=Enviar
 autorizado.asignarse.resumen.addcalidad=Agregar otra calidad
 autorizado.asignarse.resumen.nota2=Se enviará a un Funcionario Facultado de la SDH para su revisión y autorización
 
-autorizado.impuestos.="-"
+autorizado.impuestos.=-
 autorizado.impuestos.0001=Predial
 autorizado.impuestos.0002=Vehículos
 autorizado.impuestos.0003=Industria y Comercio
@@ -4911,7 +4911,7 @@ autorizado.impuestos.0008=
 autorizado.impuestos.0009=
 autorizado.impuestos.0010=Fondo Unif. Pobres, Azar y Esp
 
-autorizado.periodo.mes.="-"
+autorizado.periodo.mes.=-
 autorizado.periodo.mes.01=Enero
 autorizado.periodo.mes.02=Febrero
 autorizado.periodo.mes.03=Marzo
