Se agregan cambios a periodo de reteica en Declaraciones a firmar de contribuyente y Agente retenedor

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4924,6 +4924,12 @@ autorizado.periodo.mes.09=Septiembre
 autorizado.periodo.mes.10=Octubre
 autorizado.periodo.mes.11=Noviembre
 autorizado.periodo.mes.12=Diciembre
+autorizado.periodo.mes.B01=Enero-Febrero
+autorizado.periodo.mes.B02=Marzo-Abril
+autorizado.periodo.mes.B03=Mayo-Junio
+autorizado.periodo.mes.B04=Julio-Agosto
+autorizado.periodo.mes.B05=Septiembre-Octubre
+autorizado.periodo.mes.B06=Noviembre-Diciembre
 
 autorizado.periodo.mes.reteIca.="-"
 autorizado.periodo.mes.reteIca.00="-"
