gestion bancaria - descargar achivo

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3952,6 +3952,8 @@ conciliaciones.upload.messages.success=El archivo {0} ha sido procesado correcta
 conciliaciones.upload.messages.error=El archivo {0} ha sido procesado incorrectamente
 conciliaciones.upload.messages.ws.fileConcilia.success= {0}
 conciliaciones.upload.messages.ws.fileConcilia.error= {0}
+conciliaciones.download.file.messages.error= {0}
+conciliaciones.download.file.messages.success = {0}
 
 ica.inicial.title=ICA
 ica.inicial.descripcion1=El impuesto de Industria y Comercio se genera por el ejercicio o realización directa o indirecta de cualquier actividad industrial, comercial o de servicios en jurisdicción del Distrito Capital de Bogotá, ya sea que se cumplan de forma permanente u ocasional, en inmueble determinado, con establecimiento de comercio o sin ellos
