Se agregan cambios para campo causal de exención de Declaracion de Delineación urbana

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4919,6 +4919,7 @@ autorizado.impuestos.0009=
 autorizado.impuestos.0010=Fondo Unif. Pobres, Azar y Esp
 
 autorizado.periodo.mes.=-
+autorizado.periodo.mes.00=-
 autorizado.periodo.mes.01=Enero
 autorizado.periodo.mes.02=Febrero
 autorizado.periodo.mes.03=Marzo
