Ajuste en textos por incidencias

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4146,6 +4146,7 @@ reteica.inicial.table.tipodoc=Tipo de documento
 reteica.inicial.table.numdoc=Número de documento
 reteica.inicial.table.nombre=Nombre
 
+reteica.inicial.carga.nota=Para el reporte de retenciones en el Distrito Capital, por favor sigue con atención las siguientes indicaciones
 reteica.inicial.carga.anio=Año
 reteica.inicial.carga.periodo=Periodo
 reteica.inicial.carga.titulo=Carga de archivo
@@ -4164,8 +4165,8 @@ reteica.consulta.inicial.titulo= Mis actividades ReteICA
 reteica.consulta.inicial.descripcion=El sistema de retenciones aplica al impuesto de Industria y Comercio, teniendo en cuenta las normas específicas adoptadas por el Distrito Capital y las generales del sistema de retenciones sobre el impuesto de renta y complemenatrios.
 
 reteica.consulta.estado.titulo=Estado de Cargas
-reteica.consulta.estado.descripcion1=Para continuar con tu declaración, es importante que tus archivos de carga se procesen correctamente (Estado: Aceptado).
-reteica.consulta.estado.descipcion2=Si tu archivo fue "Rechazado", podrás descargar los errores que hayas tenido para cargarlo nuevamente.
+reteica.consulta.estado.descripcion1=Para continuar con la declaración, es importante que los archivos de carga se procesen correctamente (Estado:Aceptado).
+reteica.consulta.estado.descipcion2=Si el archivo fue “Rechazado”, consulta “Ver log”, descarga el archivo con los errores presentados y carga nuevamente sin errores.
 reteica.consulta.estado.anio=Seleccione el año a consultar
 reteica.consulta.estado.fechcarga=Fecha de carga
 reteica.consulta.estado.nomdoc=Nombre del documento
@@ -4548,6 +4549,7 @@ tramites.crear.inicial.subcategoria=Sub categoría
 tramites.crear.inicial.rol=Rol
 tramites.crear.inicial.mensaje=Mensaje
 tramites.crear.inicial.nota=Máximo 1000 caracteres
+tramites.crear.inicial.nota2=Solamente puedes adjuntar archivos en formato PDF
 tramites.crear.inicial.adjuntar=Adjuntar documento
 tramites.crear.inicial.cancelar=Cancelar
 tramites.crear.inicial.enviar=Enviar
